--- a/Week5/05_Most-frequest-pickup-loc.ipynb
+++ b/Week5/05_Most-frequest-pickup-loc.ipynb
@@ -400,6 +400,134 @@
     "# Crown Heights North\n",
     "df_join.select('Zone').where(df_join.Zone == \"Crown Heights North\").count()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_zone_count = df_join.groupBy(\"Zone\") \\\n",
+    "  .count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 37:>                                                         (0 + 4) / 4]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------------+------+\n",
+      "|                Zone| count|\n",
+      "+--------------------+------+\n",
+      "|           Homecrest| 42555|\n",
+      "|Governor's Island...|     2|\n",
+      "|              Corona| 48578|\n",
+      "|    Bensonhurst West| 52137|\n",
+      "|         Westerleigh| 10980|\n",
+      "|Charleston/Totten...|  5481|\n",
+      "|          Douglaston|  8849|\n",
+      "|      Newark Airport|   228|\n",
+      "|East Concourse/Co...| 74920|\n",
+      "|          Mount Hope| 73909|\n",
+      "|      Pelham Parkway| 50198|\n",
+      "|         Marble Hill| 14781|\n",
+      "|           Rego Park| 38686|\n",
+      "|Upper East Side S...|124621|\n",
+      "|Heartland Village...| 15737|\n",
+      "|       Dyker Heights| 24657|\n",
+      "|   Kew Gardens Hills| 24636|\n",
+      "|       Rikers Island|     3|\n",
+      "|     Jackson Heights|114413|\n",
+      "|             Bayside| 28515|\n",
+      "+--------------------+------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "df_zone_count.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_zone_filtered = df_zone_count.filter((df_zone_count.Zone == \"East Chelsea\") | \n",
+    "                     (df_zone_count.Zone == \"Astoria\") |\n",
+    "                     (df_zone_count.Zone == \"Union Sq\") | \n",
+    "                     (df_zone_count.Zone == \"Crown Heights North\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+------+\n",
+      "|               Zone| count|\n",
+      "+-------------------+------+\n",
+      "|Crown Heights North|231279|\n",
+      "|           Union Sq|158937|\n",
+      "|            Astoria|152493|\n",
+      "|       East Chelsea|147673|\n",
+      "+-------------------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_zone_filtered.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------------+------+\n",
+      "|               Zone| count|\n",
+      "+-------------------+------+\n",
+      "|Crown Heights North|231279|\n",
+      "|           Union Sq|158937|\n",
+      "|            Astoria|152493|\n",
+      "|       East Chelsea|147673|\n",
+      "+-------------------+------+\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_zone_filtered.sort(\"count\", ascending=False).show()"
+   ]
   }
  ],
  "metadata": {
